# JSNotes

./: .gitignore
.github/workflows/: ci.yml
backend/: .gitignore  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  pyproject.toml
backend/JSNotes/: pyproject.toml
backend/doc/: api.rst  conf.py  index.rst
backend/jsnotes/: __init__.py
backend/tests/: test_jsnotes.py
frontend/JSNotes/: package-lock.json  package.json  vite.config.js
frontend/JSNotes/.husky/: pre-commit
frontend/JSNotes/src/: app.html
frontend/JSNotes/tests/: index.test.js
